--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "Ch40s1",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^32.0.2"
+    "electron": "^32.0.2",
+    "electron-reloader": "^1.2.3"
+  },
+  "dependencies": {
+    "sqlite3": "^5.1.7"
   }
 }
